created analysis free tuition and built an SVM model

--- a/.src/notebooks/classes/classes_v4.ipynb
+++ b/.src/notebooks/classes/classes_v4.ipynb
@@ -228,6 +228,7 @@
     "        text = re.sub(r'bbo', 'bobo', text)\n",
     "        text = re.sub(r'tnga', 'tanga', text)\n",
     "        text = re.sub(r'pnget', 'panget', text)\n",
+    "        text = re.sub(r'thanks', 'thank', text)\n",
     "\n",
     "        return text"
    ]
@@ -280,6 +281,9 @@
     "        self.wordcloud = WordCloud(width=1200, height=800, max_words=500, background_color=\"white\", scale=2)\n",
     "        self.all_bigrams = []\n",
     "        self.all_text = ' '.join(self.df[self.text_column_name])\n",
+    "        self.background_color = '#adadadff'\n",
+    "        self.text_color = '#000000'\n",
+    "        self.bar_color = '#121166'\n",
     "\n",
     "    def descriptions(self):\n",
     "        print('shape:\\n', self.df.shape, '\\n')\n",
@@ -312,12 +316,12 @@
     "        top_10_words = word_counts.head(top)\n",
     "\n",
     "        # Set the color specifications\n",
-    "        background_color = '#27374D'\n",
-    "        text_color = '#A5D7E8'\n",
-    "        bar_color = '#1C82AD'\n",
+    "        background_color = self.background_color\n",
+    "        text_color = self.text_color\n",
+    "        bar_color = self.bar_color\n",
     "\n",
     "        # Create the bar chart\n",
-    "        fig, ax = plt.subplots(figsize=(8, 6), facecolor=background_color)\n",
+    "        fig, ax = plt.subplots(figsize=(11, 7), facecolor=background_color)\n",
     "        ax.barh(top_10_words.index, top_10_words.values, color=bar_color)\n",
     "\n",
     "        # Set the background and text colors\n",
@@ -363,12 +367,12 @@
     "        bigram_frequencies = list(bigram_frequencies)\n",
     "\n",
     "        # Set the color specifications\n",
-    "        background_color = '#27374D'\n",
-    "        text_color = '#A5D7E8'\n",
-    "        bar_color = '#1C82AD'\n",
+    "        background_color = self.background_color\n",
+    "        text_color = self.text_color\n",
+    "        bar_color = self.bar_color\n",
     "\n",
     "        # Create the bar chart\n",
-    "        fig, ax = plt.subplots(figsize=(8, 6), facecolor=background_color)\n",
+    "        fig, ax = plt.subplots(figsize=(10, 8), facecolor=background_color)\n",
     "        ax.barh(bigram_phrases, bigram_frequencies, color=bar_color)\n",
     "\n",
     "        # Set the background and text colors\n",
@@ -418,11 +422,11 @@
     "            self.wordcloud.generate(joined_comments)\n",
     "\n",
     "        # Set the background color\n",
-    "        background_color = '#27374D'\n",
+    "        background_color = self.background_color\n",
     "        self.wordcloud.background_color = background_color\n",
     "\n",
     "        # Set the colors of the words\n",
-    "        word_colors = ['#F2CA19', '#FF00BD', '#87E911', '#F3D568']\n",
+    "        word_colors = ['#b31212ff', '#121cb3ff', '#a51064ff', '#14630dff']\n",
     "        self.wordcloud.recolor(color_func=lambda *args, **kwargs: random.choice(word_colors))\n",
     "\n",
     "        self.wordcloud.to_file('{}_wordcloud.png'.format(filename))\n",
@@ -437,7 +441,7 @@
     "        counts = value_counts.values\n",
     "\n",
     "        colors = ['#001C30', '#176B87', '#64CCC5']\n",
-    "        background_color = '#27374D'\n",
+    "        background_color = self.background_color\n",
     "\n",
     "        # Map the index values to the desired labels\n",
     "        sentiment_labels = labels.map({0.0: 'negative', 1.0: 'neutral', 2.0: 'positive'})\n",
@@ -453,9 +457,9 @@
     "        \n",
     "    def bar_sentiment(self, filename: str, column_name: str):\n",
     "        # Set the color specifications\n",
-    "        background_color = '#27374D'\n",
-    "        text_color = '#A5D7E8'\n",
-    "        bar_color = '#1C82AD'\n",
+    "        background_color = self.background_color\n",
+    "        text_color = self.text_color\n",
+    "        bar_color = self.bar_color\n",
     "\n",
     "        # Set the background color\n",
     "        plt.figure(facecolor=background_color)\n",
@@ -793,7 +797,7 @@
     "        joblib.dump(self.model, 'svm_model_{}.pkl'.format(self.filename))\n",
     "        \n",
     "        # Save the vectors\n",
-    "        self.xtrain.to_csv('{}.csv'.format(self.filename))\n",
+    "        self.xtrain.to_csv('{}_{}.csv'.format(self.model_name, self.filename))\n",
     "        \n",
     "        # Save the label encoder\n",
     "        joblib.dump(self.label_encoder, 'svm_label_encoder_{}.pkl'.format(self.filename))\n",
@@ -834,7 +838,7 @@
     "        joblib.dump(self.model, 'dectree_model_{}.pkl'.format(self.filename))\n",
     "        \n",
     "        # Save the vectors\n",
-    "        self.xtrain.to_csv('{}.csv'.format(self.filename))\n",
+    "        self.xtrain.to_csv('{}_{}.csv'.format(self.model_name, self.filename))\n",
     "        \n",
     "        # Save the label encoder\n",
     "        joblib.dump(self.label_encoder, 'dectree_label_encoder_{}.pkl'.format(self.filename))\n",
@@ -869,11 +873,13 @@
     "        # Train the best Random Forest model on the entire training data\n",
     "        best_rf_model.fit(self.xtrain_vectors, self.ytrain)\n",
     "        \n",
+    "        self.model = best_rf_model\n",
+    "        \n",
     "        # Save the model to a file\n",
     "        joblib.dump(self.model, 'random_forest_model_{}.pkl'.format(self.filename))\n",
     "        \n",
     "        # Save the vectors\n",
-    "        self.xtrain.to_csv('{}.csv'.format(self.filename))\n",
+    "        self.xtrain.to_csv('{}_{}.csv'.format(self.model_name, self.filename))\n",
     "        \n",
     "        # Save the label encoder\n",
     "        joblib.dump(self.label_encoder, 'random_forest_label_encoder_{}.pkl'.format(self.filename))\n",
